fix(plantRating): wrap plant icons in button to make them accessible

--- a/app/veganaut/areaOverview/plantRating/plantRating.less
+++ b/app/veganaut/areaOverview/plantRating/plantRating.less
@@ -79,6 +79,12 @@
     color: @_color-teal;
 }
 
+.veganlevel-plant-button {
+    background: none;
+    border: none;
+    padding: 0;
+}
+
 .plant-disabled {
     opacity: 0.5;
 }
